--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -21,15 +21,31 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flask bandit
+          pip install flask bandit flake8 pytest
 
       - name: Run Bandit (Security Scan)
         run: |
           bandit -r . -f json -o bandit_report.json || true
-
 
       - name: Upload Bandit Report
         uses: actions/upload-artifact@v4
         with:
           name: bandit-report
           path: bandit_report.json
+
+      - name: Run Flake8 (Code Linter)
+        run: |
+          flake8 . --exit-zero
+
+      - name: Run tests
+        run: |
+          pytest > result.log || true
+
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: result.log
+
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
